fixed the weird spacing on the elixir descriptions

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1400,7 +1400,7 @@ ul.need_sections li .section-content {
 .ingredient_list {
   grid-column: 2/ span 2;
   grid-row: 3/ span 3;
-  padding-top: 58px;
+  padding-top: 70px;
   padding-bottom: 70px;
 }
 
@@ -2066,15 +2066,15 @@ nav a {
 
 
 .height_rejuvenate {
-  height: 45vh;
+  height: 35vh;
 }
 
 .height_awaken {
-  height: 45vh;
+  height: 35vh;
 }
 
 .height_unwind {
-  height: 45vh;
+  height: 35vh;
 }
 
 .mobile_view {
@@ -2087,7 +2087,7 @@ nav a {
 }
 
 .elixir_start {
-    height: 25vh;
+    height: 35vh;
 }
 
 .button_container {
@@ -2123,26 +2123,26 @@ nav a {
 
 .ingredient_list {
     grid-column: 1/ span 7;
-    grid-row: 3/ span 3;
+    grid-row: 1/ span 3;
+    margin-top: 25px;
+    padding-bottom: 25px;
+    padding-top: 25px;
 }
 
 .top_border {
-    height: 1px;
-    background-color: #222;
     grid-column: 1/ span 7;
-    grid-row: 2/ span 1;
+    grid-row: 1/ span 1;
+    margin-top: 35px;
 }
 
 .mobile_middle_border {
   height: 1px;
-  background-color: #222;
+  background-color: $primaryBlack;
   grid-column: 1/ span 7;
   grid-row: 5/ span 1;
 }
 
 .bottom_border {
-    height: 1px;
-    background-color: #222;
     grid-column: 1/ span 7;
     grid-row: 7/ span 1;
     margin-bottom: 80px;
@@ -2151,8 +2151,12 @@ nav a {
 .ingredient_explainer {
     grid-column: 1/ span 7;
     grid-row: 5/ span 3;
-    padding-top: 70px;
-    padding-bottom: 70px;
+    padding-top: 35px;
+    padding-bottom: 35px;
+}
+
+.ingredient_list h2 {
+    margin-bottom: 15px;
 }
 
 .rejuvenate_arrow {
@@ -2191,7 +2195,12 @@ h1.rotate {
 }
 
 .newsletter_arrow {
+    padding-left: 75%;
+}
+
+.newsletter_input:hover label.newsletter_arrow {
     padding-left: 275px;
+    transition: all .4s ease-out;
 }
 
 .newsletter_image {
@@ -2206,5 +2215,38 @@ li.secondary {
 .elixir-body {
   background-color: $primaryWhite;
 }
+
+.newsletter_input:hover div.newsletter_border {
+  width: 100%;
+}
+
+.newsletter_input:focus div.newsletter_border {
+  width: 100%;
+}
+
+.arrow_sticky {
+    position: sticky;
+    position: -webkit-sticky;
+    position: -moz-sticky;
+    position: -ms-sticky;
+    position: -o-sticky;
+    height: 90vh;
+    top: 110px;
+}
+
+.section-title-closed {
+  margin: 0;
+  padding: 0;
+  color: #222;
+  top: 81%;
+  z-index: 1;
+  position: sticky;
+  position: -webkit-sticky;
+  position: -moz-sticky;
+  position: -ms-sticky;
+  position: -o-sticky;
+}
+
+
 
 }
