--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -24,14 +24,19 @@ html, body {
   }
 
   .slick-list {
-    height: 263px;
+    height: 260px;
   }
+
 }
 
 @media only screen and (max-width: 769px) and (min-width: 576px)  {
   .slick-slide img {
     width: 100%;
 }
+}
+
+.slick-current {
+  min-width: 292px;
 }
 
 
